[package]
name = "archiver_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "tls-native-tls", "chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
