[package]
name = "archiver_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4.29"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-native-tls", "chrono"] }
tokio = { version = "1.52.2", features = ["full"] }
# clap = { version = "4.5.4", features = ["derive"] }
# log = "0.4.21"
# sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "tls-native-tls", "chrono"] }
# tokio = { version = "1.37.0", features = ["full"] }
